fix: Fix sonarlint issues